[SCB-5] Tweek design - fix container overflow in modal

--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -28,6 +28,11 @@ div.modal-dialog h4.panel-title a {
     .modal-dialog {
         width: 80%;
     }
+
+    .modal .container {
+        min-width: 0 !important;
+        width: auto;
+    }
 }
 
 div.modal-dialog h4.panel-title a {
